Manifests/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp
  labels:
    app: kuber-dp
spec:
  replicas: 2
  strategy: 
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: web2
          image: tselofan/miniapi:latest
          imagePullPolicy: "Always"
          livenessProbe:
            httpGet:
              path: /health/
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 3
