Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
      env: prod
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
