Manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
     - host: arch.homework
       http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: kuber-service
                port:
                  number: 80
