Manifests/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress1
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$3
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
       paths:
        - path: /otus(/|$)(.*)/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: kuber-service
              port:
                number: 80
